2008-11-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/compiler/ucparse.yy: Fixing compilation errors.

2008-11-01	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: A few fixes to UCXT data files. New built-in constants for UCC.
	  Also, partially failed attempt at getting

2008-10-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamemgr/*: Using file names from fnames.h. Define in SI the resources used
	  by the shapes browser.
	* files/U7file.h: Documentation error.

2008-10-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gumps/Jawbone_gump.cc: Remove incorrect and unnecessary check.
	* all else: Fixed resources loaded from XML file. Made Game::get_resource
	  return 'const str_int_pair&' instead of 'str_int_pair'.

2008-10-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed segmentation fault on loading fonts.

2008-10-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* General: Doxygenified lots of code. Some reformatting. Implemented changes
	  due to changed file API in 'files' dir. Lots more files can be patched
	  now, including difference patching. Removed some unused functions and
	  variables.
	* files/*: Split some classes into their own files. Decoupled reading from
	  a format from reading from a file. Improved support for patches (whether
	  from files or from memory) in basic file format reading classes. Updated
	  copyright notices. Removed function used only by Expack from base flex
	  class. Removed unused instances of PENTAGRAM conditional compilation.
	  Reduced the number of exceptions thrown to make multiple source patches
	  more forgiving of missing files. More throrough use of C++ streams instead
	  of C IO functions, including removal of FileDataSource class.
	  'Flex', 'IFF', 'Flat' and 'Table' classes are now sourceless base classes
	  responsible for reading a format from an unspeficied source, while the
	  derived (typedef) classes 'FlexFile', 'IFFFile', 'FlatFile', 'TableFile',