@@ -1,3 +1,7 @@
+2008-11-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* Fixed problem with playing Ogg in a non-IFF endgame.dat. Fixed SI intro/
+	  endgame using hardcoded paths instead of those passed to constructor.
+
 2008-11-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* usecode/compiler/ucparse.yy: Fixing compilation errors.
 
